menambahkan tambahan nambah

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Test
+<html>
+  <head>
+    <body>
+      <center><h1 style="font: red 'Courier New';>Selamat Datang Om</h1></center>
+        <h2 style="margin-left: 20px; font: red 'Courier New';">
+        <a href="http://muhidayat123.blogspot.com/" style="{color:white;} :hover {color:red;}">
+          Muhidayat Blogspot
+        </a>
+        </h2>
+        </body>
+        </head>
+        </html>
+        
+      
